<resources>
    <string name="app_name">Project3_GameApp2</string>
    <string name="login_fragment">Login</string>
    <string name="register_fragment">Create a New Account</string>
    <string name="game_lobby_fragment">Game Lobby</string>
    <string name="first_name_placeholder_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="email_placeholder_text">Email</string>
    <string name="password_placeholder_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="registration_button_text">Register a new account</string>
    <string name="register_button_text">Register</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="join_txt">Join</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="new_chatroom">+ New Chatroom</string>
    <string name="leave_txt">Leave</string>
    <string name="request_game_txt">Request Game</string>
    <string name="create_game_txt">Create Game</string>
    <string name="loading_placeholder_text">Loading...</string>
    <string name="make_game_alert_txt">Creating Game</string>
    <string name="awaiting_player2_text">Waiting for players...</string>
    <string name="no_player2_joined_text">No players joined, game canceled</string>
    <string name="waiting_turn_text">Waiting for other player to finish turn</string>
    <string name="invalid_card_text">Card does not match top card, please choose another</string>
    <string name="player_cancel_text">Game canceled by player</string>
</resources>