<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

    <EditText
        android:id="@+id/editTextRegisterFirstName"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/first_name_placeholder_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/email_placeholder_text"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterFirstName"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterLastName" />

    <EditText
        android:id="@+id/editTextRegisterLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/last_name_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterFirstName"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterFirstName" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password_placeholder_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterFirstName"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/primary"
        android:text="@string/register_button_text"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

    <Button
        android:id="@+id/buttonCancelToLogin"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel_button_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>